# wukong

./: .gitignore  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/barry/hooktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  linker_hooks.cpp  native_build_info_hook.cpp  native_common.cpp  native_common.h  probe_hooks.cpp  property_hooks.cpp
app/src/main/java/com/barry/hooktest/: FirstFragment.java  HookModule.java  MainActivity.java  (+1 more)
app/src/main/res/drawable/: bg.xml  bg_setting_input.xml  button_pressed_background.xml  button_selector.xml  df_button_normal_background.xml  df_button_pressed_background.xml  df_button_selector.xml  ic_arrow_drop_down_24.xml  ic_clear_20.xml  ic_save_24.xml  split_line.xml
app/src/main/res/layout/: activity_main.xml  device_info.xml  item_setting_button.xml  item_setting_editext.xml  item_setting_readonly.xml  item_setting_select.xml  item_setting_switch.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
screen-share-demo/: build.gradle  proguard-rules.pro
screen-share-demo/src/main/: AndroidManifest.xml
screen-share-demo/src/main/res/drawable/: ic_launcher.xml
screen-share-demo/src/main/res/values/: colors.xml  styles.xml
(+41 files in other folders)
